# tenqpy

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
tenqpy/: core.py
tests/: test_core.py
